# solana-anchor-smart-contract-examples

./: README.md  SECURITY.md
.github/workflows/: test-hello.yml
counter/: .gitignore  Anchor.toml  README
counter/programs/counter/: Cargo.toml
counter/programs/counter/src/: lib.rs
counter/tests/: counter.ts
favorites/: Anchor.toml  Cargo.toml
favorites/programs/favorites/: Cargo.toml
favorites/programs/favorites/src/: lib.rs  lib_more_secre_version.rs  lib_using_set_inner_method.rs
hello_world/: .gitignore  Anchor.toml
hello_world/programs/hello_world/: Cargo.toml
hello_world/programs/hello_world/src/: lib.rs
hello_world/tests/: hello_world.ts
